# pre-commit-hooks

./: .bumpversion.cfg  .bumpversion.toml  .envrc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prospector.yaml  .pylintrc  MANIFEST.in  Main.elm  README.md  bar  bump  bump-no-shebang  bump.bash  echofoobar.sh  environment.yml  flake8-extensions  foo  foo.bash  foo.ipynb  foo.sh  install  install.bash  install.sh  log.txt  package-lock.json  package.json  pre-commit  pre-commit.bash  pre-commit.sh  pyproject.toml  pyrightconfig.json  pytest.ini  pytest.toml  remove.sh  requirements-all.txt  requirements-dev.txt  (+11 more)
.github/workflows/: ci.yml  on-pull.yml  pull-request.yaml  pull-request.yml  push.yaml  push.yml
.vim/: coc-settings.json
arst/: foo.py  subarst  subarst copy
dummy_package.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
flake8/: install  plugins
hooks/: basic_hooks  check_python  check_settings.py  check_shell  do_python.py  elm_hooks  getflake8  no_commit.py  no_commit_to_branch  notebook.py  prettier  python.sh  python_hooks  run-shellcheck  run-shellcheck.bash  run-shfmt  run_black  run_shellcheck  run_shfmt  shell  shell.sh  shell_hooks  shfmt-and-shellcheck  shfmt-and-shellcheck.bash  text.py  universal.py
hooks/do_python/: __init__.py
hooks/py_hooks/: add_trailing_comma  autoflake  pybetter  pyupgrade  reorder_python_imports
hooks2/: do_python.sh
hooks_old/: basic_hooks  prettier  python_hooks
python/: .flake8  flake8  flake8-ignores  mypy.ini  requirements.txt
src/dycw_pre_commit_hooks/: check_settings.py  run_bump2version.py  tag_commits_and_push_tags.py
src/hooks/: check_settings.py
src/pre_commit_hooks/: __init__.py  check_settings.py  click.py  common.py  constants.py  run_bump2version.py  run_dockfmt.py  run_poetry_export.py  run_scan_deps.py  tag_commits_and_push_tags.py  types.py  utilities.py
src/pre_commit_hooks/add_hooks/: cli.py
src/pre_commit_hooks/check_submodules/: __init__.py
src/pre_commit_hooks/configs/: gitignore-python
src/pre_commit_hooks/format_requirements/: __init__.py
src/pre_commit_hooks/hooks/: add_future_import_annotations.py  add_hooks.py  add_ruff_hooks.py  check_version_bumped.py  check_versions_consistent.py  format_pre_commit_config.py  format_pytest.py  format_requirements.py  pin_cli_dependencies.py  pin_cli_requirements.py  replace_sequence_str.py  run_prek_autoupdate.py  run_uv_lock.py  run_version_bump.py  setup_add_hooks.py  setup_bump_my_version.py  setup_ci_pull_request.py  setup_ci_push.py  setup_coverage.py  setup_direnv.py  setup_git.py  setup_just.py  setup_pre_commit.py  setup_pyproject.py  setup_pyright.py  setup_pytest.py  setup_readme.py  setup_ruff.py  update_ci_action_versions.py  update_ci_extensions.py  update_requirements.py
src/pre_commit_hooks/mirror_files/: __init__.py
src/pre_commit_hooks/mirror_files_if_exist/: __init__.py
src/pre_commit_hooks/replace_sequence_str/: __init__.py
src/pre_commit_hooks/run_bump2version/: __init__.py
src/pre_commit_hooks/run_bump_my_version/: __init__.py
src/pre_commit_hooks/run_dockfmt/: __init__.py
src/pre_commit_hooks/run_hatch_version/: __init__.py
src/pre_commit_hooks/run_pip_compile/: __init__.py
src/pre_commit_hooks/run_ruff_format/: __init__.py
src/pre_commit_hooks/run_uv_pip_compile/: __init__.py
src/pre_commit_hooks/tag_commits/: __init__.py
src/tests/: test_add_future_import_annotations.py  test_cli.py  test_hooks.py  test_main.py  test_replace_sequence_str.py  test_utilities.py
src/tests/dycw_pre_commit_hooks/: test_utilities.py
src/tests/format_requirements/: in.toml  out.toml  test_format_requirements.py
src/tests/format_requirements/toml/basic/: in.toml  out.toml
src/tests/hooks/: test_add_future_import_annotations.py  test_add_hooks.py  test_check_version_bumped.py  test_check_versions_consistent.py  test_format_pre_commit_config.py  test_format_pytest.py  test_format_requirements.py  test_pin_cli_requirements.py  test_replace_sequence_str.py  test_run_prek_autoupdate.py  test_setup_add_hooks.py  test_setup_bump_my_version.py  test_setup_ci_pull_request.py  test_setup_ci_push.py  test_setup_coverage.py  test_setup_direnv.py  test_setup_git.py  test_setup_gitignore.py  test_setup_just.py  test_setup_pre_commit.py  test_setup_pyproject.py  test_setup_pyright.py  test_setup_pytest.py  test_setup_readme.py  test_setup_ruff.py  test_update_ci_action_versions.py  test_update_ci_extensions.py  test_update_requirements.py
src/tests/pre_commit_hooks/: test_utilities.py
tests/: bump-with-shebang  foo.py  just_a_file.py  test.bash  test_foo.py
tests/inner/: bump-with-shebang
tests/inner2/: test.bash
tests/tests copy/: bump-no-shebang.bash  test.bash
try-repo/: run-uv-pip-compile.sh
utilities/: fail_if_missing_and_strict  has_command  is_bash_file  is_python_file
