[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = ["pyright>=1.1.408", "rich>=14.2.0", "dycw-utilities[test]>=0.183.5"]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "click>=8.3.1",
    "dycw-utilities>=0.183.5",
    "libcst>=1.8.6",
    "more-itertools>=10.8.0",
    "orjson>=3.11.5",
    "packaging>=25.0",
    "pyyaml>=6.0.3",
    "tomlkit>=0.14.0",
    "xdg-base-dirs>=6.0.2",
  ]
  description = "Pre-commit hooks"
  name = "pre-commit-hooks"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.14.7"

  [project.scripts]
    add-hooks = "pre_commit_hooks.hooks.add_hooks:_main"
    add-ruff-hooks = "pre_commit_hooks.hooks.add_ruff_hooks:_main"
    check-versions-consistent = "pre_commit_hooks.hooks.check_versions_consistent:_main"
    run-version-bump = "pre_commit_hooks.hooks.run_version_bump:_main"
    # format-requirements = "pre_commit_hooks.format_requirements:main"
    # replace-sequence-str = "pre_commit_hooks.replace_sequence_str:main"

  [project.optional-dependencies]
    cli = [
      "click==8.3.1",
      "dycw-utilities==0.183.5",
      "gitpython==3.1.46",
      "libcst==1.8.6",
      "loguru==0.7.3",
      "more-itertools==10.8.0",
      "orjson==3.11.5",
      "packaging==25.0",
      "ruamel-yaml==0.19.1",
      "tomlkit==0.14.0",
      "xdg-base-dirs==6.0.2",
    ]
