[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]

[dependency-groups]
  dev = ["dycw-utilities[test]>=0.184.4", "pyright>=1.1.408", "rich>=14.2.0"]

[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "click>=8.3.1",
    "dycw-utilities>=0.184.4",
    "libcst>=1.8.6",
    "orjson>=3.11.5",
    "packaging>=25.0",
    "pyyaml>=6.0.3",
    "tomlkit>=0.14.0",
    "xdg-base-dirs>=6.0.2",
  ]
  description = "Pre-commit hooks"
  name = "dycw-pre-commit-hooks"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.14.17"

  [project.scripts]
    add-future-import-annotations = "pre_commit_hooks.hooks.add_future_import_annotations:_main"
    add-hooks = "pre_commit_hooks.hooks.add_hooks:_main"
    add-ruff-hooks = "pre_commit_hooks.hooks.add_ruff_hooks:_main"
    check-versions-consistent = "pre_commit_hooks.hooks.check_versions_consistent:_main"
    format-requirements = "pre_commit_hooks.hooks.format_requirements:_main"
    replace-sequence-str = "pre_commit_hooks.hooks.replace_sequence_str:_main"
    run-prek-autoupdate = "pre_commit_hooks.hooks.run_prek_autoupdate:_main"
    run-version-bump = "pre_commit_hooks.hooks.run_version_bump:_main"
    update-requirements = "pre_commit_hooks.hooks.update_requirements:_main"

  [project.optional-dependencies]
    cli = [
      "click==8.3.1",
      "dycw-utilities==0.184.4",
      "libcst==1.8.6",
      "orjson==3.11.5",
      "packaging==25.0",
      "pyyaml==6.0.3",
      "tomlkit==0.14.0",
      "xdg-base-dirs==6.0.2",
    ]

[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "pre_commit_hooks"
      module-root = "src"
